@@ -31,6 +31,7 @@ version <next>:
 - Dolby E decoder and SMPTE 337M demuxer
 - unpremultiply video filter
 - tlut2 video filter
+- floodfill video filter
 
 version 3.3:
 - CrystalHD decoder moved to new decode API
